--- a/templates/quickstart-delivery-kit-all-init.template.yaml
+++ b/templates/quickstart-delivery-kit-all-init.template.yaml
@@ -42,6 +42,14 @@ Parameters:
       See https://docs.aws.amazon.com/AmazonS3/latest/dev/UsingMetadata.html
       and https://aws-quickstart.github.io/option1.html.
     Type: String
+  QSS3BucketRegion:
+    Default: 'us-east-1'
+    Description: 'AWS Region where the Quick Start S3 bucket (QSS3BucketName) is
+      hosted. Keep the default Region unless you are customizing the template.
+      Changing this Region updates code references to point to a new Quick Start location.
+      When using your own bucket, specify the Region.
+      See https://aws-quickstart.github.io/option1.html.'
+    Type: String
 Conditions:
   UsingDefaultBucket: !Equals [ !Ref QSS3BucketName, 'aws-quickstart' ]
 Resources:
@@ -220,9 +228,15 @@ Resources:
         Image: aws/codebuild/standard:4.0
         Type: LINUX_CONTAINER
         EnvironmentVariables:
-          - Name: S3BUCKET
+          - Name: REPO
             Type: PLAINTEXT
-            Value: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+            Value: !Sub
+              - 's3://${S3Bucket}/${QSS3KeyPrefix}'
+              - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+                S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+          #- Name: S3BUCKET
+          #  Type: PLAINTEXT
+          #  Value: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
           - Name: PREFIX
             Type: PLAINTEXT
             Value: !Ref QSS3KeyPrefix
@@ -245,19 +259,19 @@ Resources:
             build:
               commands:
                 - echo Configuring AWS credentials
-                - echo $S3BUCKET
+                - echo $REPO
                 - echo AWS_CONTAINER_CREDENTIALS_RELATIVE_URI $AWS_CONTAINER_CREDENTIALS_RELATIVE_URI
                 - curl -qL -o aws_credentials.json http://169.254.170.2/$AWS_CONTAINER_CREDENTIALS_RELATIVE_URI > aws_credentials.json
                 - aws configure set aws_access_key_id `jq -r '.AccessKeyId' aws_credentials.json`
                 - aws configure set aws_secret_access_key `jq -r '.SecretAccessKey' aws_credentials.json`
                 - aws configure set aws_session_token `jq -r '.Token' aws_credentials.json`
                 - aws configure set default.region $AWS_REGION
-                - aws s3 sync s3://$S3BUCKET/$PREFIX ./amc-analytics-delivery-kit/
+                - aws s3 sync $REPO ./amc-analytics-delivery-kit/
                 - cd ./amc-analytics-delivery-kit/
                 - git config --global user.email $EMAILADDRESS
                 - git config --global user.name $USERNAME
                 - chmod +x ./scripts/initial_deployment.sh
-                - ./scripts/initial_deployment.sh -f -rp s3://$S3BUCKET/$PREFIX
+                - ./scripts/initial_deployment.sh -f -rp $REPO
           artifacts:
             files:
               - "*"
