--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docs/boilerplate"]
 	path = docs/boilerplate
 	url = https://github.com/aws-quickstart/quickstart-documentation-base-common.git
+[submodule "docs/docs/boilerplate"]
+	path = docs/docs/boilerplate
+	url = https://github.com/aws-quickstart/quickstart-documentation-base-common.git
