--- a/amc_quickstart/microservices/customer_management_service/scripts/amc-initialize.yaml
+++ b/amc_quickstart/microservices/customer_management_service/scripts/amc-initialize.yaml
@@ -1,7 +1,8 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: "The following template creates an S3 Bucket and S3 Bucket policy with prescribed parameter values 
-              to enable cross account write access for the parameterized AWS account."
- 
+Description:
+  "The following template creates an S3 Bucket and S3 Bucket policy with prescribed parameter values
+  to enable cross account write access for the parameterized AWS account."
+
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
@@ -10,13 +11,13 @@ Metadata:
         Parameters:
           - pBucketName
           - pCrossAccountAccessAccountId
- 
+
     ParameterLabels:
       pBucketName:
         default: "[DO NOT MODIFY] Name of S3 bucket to create."
       pCrossAccountAccessAccountId:
         default: "[DO NOT MODIFY] AWS Account ID of the account given PutObject permissions to the bucket."
- 
+
 Parameters:
   pBucketName:
     Type: String
@@ -33,7 +34,6 @@ Parameters:
     Type: String
 
 Resources:
-
   rS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -41,45 +41,38 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
               KMSMasterKeyID: !GetAtt rS3EncryptionKey.Arn
       PublicAccessBlockConfiguration:
         BlockPublicAcls: True
         BlockPublicPolicy: True
         IgnorePublicAcls: True
         RestrictPublicBuckets: True
-      # NotificationConfiguration:
-      #   QueueConfigurations:
-      #     - Event: 's3:ObjectRemoved:*'
-      #       Queue: !Sub "arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:sdlf-catalog-queue"
-      #     - Event: 's3:ObjectCreated:*'
-      #       Queue: !Sub "arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:sdlf-catalog-queue"
- 
 
   rS3BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
       Bucket: !Ref rS3Bucket
       PolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Id: BucketDeliveryPolicy
         Statement:
-        - Sid: BucketDelivery
-          Effect: Allow
-          Principal:
-            AWS: !Sub arn:aws:iam::${pCrossAccountAccessAccountId}:root
-          Action:
-            - s3:PutObject
-            - s3:PutObjectAcl
-          Resource: !Sub arn:aws:s3:::${pBucketName}/*
-        - Sid: BucketOwnerAccess
-          Effect: Allow
-          Principal:
-            AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
-          Action: s3:*
-          Resource:
-            - !Sub arn:aws:s3:::${pBucketName}/*
-            - !Sub arn:aws:s3:::${pBucketName}
+          - Sid: BucketDelivery
+            Effect: Allow
+            Principal:
+              AWS: !Sub arn:aws:iam::${pCrossAccountAccessAccountId}:root
+            Action:
+              - s3:PutObject
+              - s3:PutObjectAcl
+            Resource: !Sub arn:aws:s3:::${pBucketName}/*
+          - Sid: BucketOwnerAccess
+            Effect: Allow
+            Principal:
+              AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
+            Action: s3:*
+            Resource:
+              - !Sub arn:aws:s3:::${pBucketName}/*
+              - !Sub arn:aws:s3:::${pBucketName}
 
   rS3EncryptionKey:
     Type: AWS::KMS::Key
@@ -87,43 +80,43 @@ Resources:
       Description: String
       Enabled: true
       KeyPolicy:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Id: key-consolepolicy-3
         Statement:
-        - Sid: Enable IAM User Permissions
-          Effect: Allow
-          Principal:
-            AWS:
-              - !Sub 'arn:aws:iam::${AWS::AccountId}:root'
-          Action: kms:*
-          Resource: '*'
-        - Sid: Enable IAM Cross Account Permissions
-          Effect: Allow
-          Principal:
-            AWS:
-              - !Sub 'arn:aws:iam::${pCrossAccountAccessAccountId}:root'
-          Action:
-            - kms:Encrypt
-            - kms:ReEncrypt*
-            - kms:GenerateDataKey*
-            - kms:DescribeKey
-          Condition:
-            StringEquals:
-              'kms:ViaService': !Sub 's3.${AWS::Region}.amazonaws.com'
-          Resource: '*'
-        - Sid: Enable AddAMCInstance service to Modify
-          Effect: Allow
-          Principal:
-            AWS: !Ref pLambdaRoleArn
-          Action:
-            - kms:CreateKey
-            - kms:TagResource
-            - kms:CreateAlias
-            - kms:UpdateAlias
-            - kms:DescribeKey
-            - kms:PutKeyPolicy
-            - kms:ScheduleKeyDeletion
-          Resource: '*'
+          - Sid: Enable IAM User Permissions
+            Effect: Allow
+            Principal:
+              AWS:
+                - !Sub "arn:aws:iam::${AWS::AccountId}:root"
+            Action: kms:*
+            Resource: "*"
+          - Sid: Enable IAM Cross Account Permissions
+            Effect: Allow
+            Principal:
+              AWS:
+                - !Sub "arn:aws:iam::${pCrossAccountAccessAccountId}:root"
+            Action:
+              - kms:Encrypt
+              - kms:ReEncrypt*
+              - kms:GenerateDataKey*
+              - kms:DescribeKey
+            Condition:
+              StringEquals:
+                "kms:ViaService": !Sub "s3.${AWS::Region}.amazonaws.com"
+            Resource: "*"
+          - Sid: Enable AddAMCInstance service to Modify
+            Effect: Allow
+            Principal:
+              AWS: !Ref pLambdaRoleArn
+            Action:
+              - kms:CreateKey
+              - kms:TagResource
+              - kms:CreateAlias
+              - kms:UpdateAlias
+              - kms:DescribeKey
+              - kms:PutKeyPolicy
+              - kms:ScheduleKeyDeletion
+            Resource: "*"
 
   rS3EncryptionKeyAlias:
     Type: AWS::KMS::Alias
@@ -133,9 +126,9 @@ Resources:
       TargetKeyId: !Ref rS3EncryptionKey
 
   ####### CLOUD WATCH RULES ######
-  rRuleExecuteDataLakeProcess: 
+  rRuleExecuteDataLakeProcess:
     Type: AWS::Events::Rule
-    Properties: 
+    Properties:
       Description: "Trigger Data Lake Process"
       State: "ENABLED"
       EventPattern:
@@ -152,14 +145,13 @@ Resources:
           requestParameters:
             bucketName:
               - !Ref pBucketName
-      Targets: 
-        - 
-          Arn: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${pResourcePrefix}-data-lake-routing"
+      Targets:
+        - Arn: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${pResourcePrefix}-data-lake-routing"
           Id: "DataLakeRoutingLambdaTrigger"
 
-  PermissionForRuleExecuteWorkflowExecutionQueueConsumer: 
+  PermissionForRuleExecuteWorkflowExecutionQueueConsumer:
     Type: AWS::Lambda::Permission
-    Properties: 
+    Properties:
       FunctionName: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${pResourcePrefix}-data-lake-routing"
       Action: "lambda:InvokeFunction"
       Principal: "events.amazonaws.com"
@@ -168,7 +160,7 @@ Resources:
 Outputs:
   oBucketName:
     Value: !Sub ${pBucketName}
-    Export: 
+    Export:
       Name: !Sub ${AWS::StackName}-bucket
   oS3EncryptionKeyAlias:
     Value: !Ref rS3EncryptionKeyAlias
